@startuml
!pragma layout smetana

class Main {
    +main(String[] args)
}

class StreamingService {
    -ArrayList<Media> mediaList
    -ArrayList<User> userList
    -TextUI ui
    --
    +startSystem()
    +saveUsers()
    +Category parseCategory(String genre)
    +saveMedia(User user, ArrayList<Media> list, String fileName)
    +ArrayList<Media> getMediaList()
    +ArrayList<User> getUserList()
    +TextUI getUi()
    +addUser(User u)
}

class Menu {
    -UserController userController
    -MediaController mediaController
    -TextUI ui
    --
    +showStartMenu()
    +run(User user)
    -showMainMenu()
}

class UserController {
    -StreamingService service
    -Menu menu
    -TextUI ui
    --
    +setMenu(Menu menu)
    +registerUser()
    +loginUser()
}

class MediaController {
    -StreamingService service
    -TextUI ui
    --
    +searchTitle(User user)
    +searchCategory(User user)
    +displayWatchedList(User user)
    +displaySavedList(User user)
    +manageMedia(User user, ArrayList<Media> list, String fileName)
    +playOrSave(Media chosen, User user)
    -playMedia(Media chosen, User user)
}

abstract class Media {
    -String title
    -int releaseYear
    -double rating
    -ArrayList<Category> categories
    --
    +String getTitle()
    +int getReleaseYear()
    +double getRating()
    +addCategory(Category c)
    +ArrayList<Category> getCategories()
    +{abstract} play()
}

class Movie {
    --
    +play()
}

class Series {
    -ArrayList<Season> seasons
    --
    +addSeason(Season s)
    +int getNumberOfSeasons()
    +ArrayList<Season> getSeasons()
    +play()
}

class Season {
    -int seasonNumber
    -ArrayList<Episode> episodes
    --
    +int getSeasonNumber()
    +ArrayList<Episode> getEpisodes()
    +addEpisode(Episode e)
}

class Episode {
    -int episodeNumber
    --
    +String getTitle()
    +play()
}

class User {
    -String id
    -String username
    -String password
    -ArrayList<Media> watched
    -ArrayList<Media> saved
    --
    +boolean checkLogin(String password)
    +addToWatched(Media m)
    +addToSaved(Media m)
    +removeFromSaved(Media m)
    +String getId()
    +String getUsername()
    +String getPassword()
    +ArrayList<Media> getWatched()
    +ArrayList<Media> getSaved()
}

enum Category {
    Crime
    War
    Drama
    Family
    Romance
    Sciencefiction
    Mystery
}

package Util {
    class FileIO {
        +{static} ArrayList<String> readData(String path)
        +{static} saveData(ArrayList<String> list, String path, String header)
    }

    class TextUI {
        +displayMsg(String msg)
        +String promptText(String msg)
        +int promptNumeric(String msg)
        +boolean promptBinary(String msg)
    }
}

' Relationer
Main --> StreamingService

StreamingService *-- UserController : "has a"
StreamingService *-- MediaController : "has a"
StreamingService *-- Menu : "has a"
StreamingService --> FileIO
StreamingService --> TextUI
StreamingService *-- User : "has a"
StreamingService *-- Media : "has a"

Menu --> UserController
Menu --> MediaController
Menu --> TextUI

UserController --> Menu
UserController --> TextUI

MediaController --> TextUI

Media <|-- Movie : "is a"
Media <|-- Series : "is a"
Media <|-- Episode : "is a"
Series *-- Season : "has a"
Season *-- Episode : "has a"
Media *-- Category : "has a"

User --> Media : "watched/saved"

@enduml